@@ -1,3 +1,382 @@
+<<<<<<< .mine
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+	<title>Blueprint CSS Framework Test Suite</title>
+
+  <!-- Framework CSS -->
+	<link rel="stylesheet" href="../blueprint/screen.css" type="text/css" media="screen, projection" />
+	<link rel="stylesheet" href="../blueprint/print.css" type="text/css" media="print" />
+  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+	
+	<!-- Import plugins for the sake of testing -->
+	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
+	<link rel="stylesheet" href="../blueprint/plugins/buttons/buttons.css" type="text/css" media="screen, projection" />	
+	
+	<!-- Show the grid and baseline -->
+	<style type="text/css">
+	/*<![CDATA[*/
+			.container { background: url('../blueprint/lib/grid.png'); }
+			
+			/* IE5.5+ PNG transparency plugin testing */
+			img, div { behavior: url(../blueprint/plugins/iepngfix/iepngfix.htc) }
+	/*]]>*/
+	</style>
+</head>
+
+<body>
+
+	<!-- div.container for sample -->
+
+	<div class="container">
+		<h1>Blueprint Test Suite</h1>
+		<p>This file can be used to take a look at the capabilities of the Blueprint CSS framework to produce clean grid based pages,
+		  and to check if the elements render correctly across different browsers.
+		  If you want to see how something works simply do a 'view source' on this page for inspiration.</p>	  
+	  
+		<h2>A simple sample page, with common elements</h2>
+		<hr />
+
+		<div class="column span-15 prepend-1">
+			<h3><span class="dquo">“</span>The gist <span class="alt">&amp;</span> The rest”</h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nunc congue ipsum vestibulum libero. Aenean vitae justo. Nam eget tellus. Etiam convallis, est eu lobortis mattis, lectus tellus tempus felis, a ultricies erat ipsum at metus.</p>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi et risus. Aliquam nisl. Nulla facilisi. Cras accumsan vestibulum ante. Vestibulum sed tortor. Praesent tempus fringilla elit. Ut elit diam, sagittis in, nonummy in, gravida non, nunc. Ut orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Nam egestas, orci eu imperdiet malesuada, nisl purus fringilla odio, quis commodo est orci vitae justo. Aliquam placerat odio tincidunt nulla. Cras in libero. Aenean rutrum, magna non tristique posuere, erat odio eleifend nisl, non convallis est tortor blandit ligula. Nulla id augue.</p>
+			<p><img src="test.jpg" class="top pull-1" alt="test" />Nullam mattis, odio ut tempus facilisis, metus nisl facilisis metus, auctor consectetuer felis ligula nec mauris. Vestibulum odio erat, fermentum at, commodo vitae, ultrices et, urna. Mauris vulputate, mi pulvinar sagittis condimentum, sem nulla aliquam velit, sed imperdiet mi purus eu magna. Nulla varius metus ut eros. Aenean aliquet magna eget orci. Class aptent taciti sociosqu ad litora.</p>
+			<p>Vivamus euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse vel nibh ut turpis dictum sagittis. Aliquam vel velit a elit auctor sollicitudin. Nam vel dui vel neque lacinia pretium. Quisque nunc erat, venenatis id, volutpat ut, scelerisque sed, diam. Mauris ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec mattis. Morbi dignissim sollicitudin libero. Nulla lorem.</p>
+			<blockquote>
+				<p>Integer cursus ornare mauris. Praesent nisl arcu, imperdiet eu, ornare id, scelerisque ut, nunc. Praesent sagittis erat sed velit tempus imperdiet. Ut tristique, ante in interdum hendrerit, erat enim faucibus felis, quis rutrum mauris lorem quis sem. Vestibulum ligula nisi, mattis nec, posuere et, blandit eu, ligula. Nam suscipit placerat odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Pellentesque tortor libero, venenatis vitae, rhoncus eu, placerat ut, mi. Nulla nulla.</p>
+			</blockquote>
+			<p>Maecenas vel metus quis magna pharetra fermentum. Integer sit amet tortor. Maecenas porttitor, pede sed gravida auctor, nulla augue aliquet elit, at pretium urna orci ut metus. Aliquam in dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, tellus id ornare posuere, quam nunc accumsan turpis, at convallis tellus orci et nisl. Phasellus congue neque a lorem.</p>
+		</div>
+
+		<div class="column span-8 last">
+			<h4>Sidebar</h4>
+
+			<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc. Mauris venenatis, pede sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue.</p>
+			<p>Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida.</p>
+			<p>Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida.</p>
+			<p class="quiet">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc. Mauris venenatis, pede sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue.</p>
+
+			<h5>Incremental leading</h5>
+			<p class="incr">Vestibulum ante ipsum primis in faucibus orci luctus vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc. Mauris venenatis, pede sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue. sed aliquet vehicula, lectus tellus.</p>
+			<p class="incr">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc. Mauris venenatis, pede sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue. sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue. ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc. Mauris venenatis, pede sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue. sed aliquet vehicula, lectus tellus pulvinar neque, non cursus sem nisi vel augue.</p>
+		</div>
+		<hr />
+
+		<div class="column span-24">
+			<div class="column span-12">
+				<h4>Here's one column</h4>
+				<p>Maecenas vel metus quis magna pharetra fermentum. Integer sit amet tortor. Maecenas porttitor, pede sed gravida auctor, nulla augue aliquet elit, at pretium urna orci ut metus. Aliquam in dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, tellus id ornare posuere, quam nunc accumsan turpis, at convallis tellus orci et nisl. Phasellus congue neque a lorem. Duis ultrices. Morbi consequat pretium velit. Quisque velit tellus, varius vel, tempus sit amet, fermentum id, elit.</p>
+				<p>Duis ultrices. Morbi consequat pretium velit. Quisque velit tellus, varius vel, tempus sit amet, fermentum id, elit. Duis ipsum justo, facilisis ac, dignissim ut, ullamcorper sed, sem. Nunc tellus sem, tincidunt ac, porta eu, faucibus at, mi. Integer at diam. Donec a elit in justo euismod iaculis. Duis mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur orci ante, pretium sit amet, lacinia ac, posuere nec, turpis. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+			</div>
+
+			<div class="column span-12 last">
+				<h4>And here's another</h4>
+				<p>Maecenas vel metus quis magna pharetra fermentum. Integer sit amet tortor. Maecenas porttitor, pede sed gravida auctor, nulla augue<img src="test.jpg" alt="test" /> aliquet elit, at pretium urna orci ut metus. Aliquam in dolor. Phasellus congue neque a lorem. Duis ultrices.</p>
+				<p>Duis ultrices. Morbi consequat pretium velit. Quisque velit tellus, varius vel, tempus sit amet, fermentum id, elit. Duis ipsum justo, facilisis ac, dignissim ut, ullamcorper sed, sem. Nunc tellus sem, tincidunt ac, porta eu, faucibus at, mi. Integer at diam. Donec a elit in justo euismod iaculis. Duis mattis. Duis ultrices.</p>
+			</div>
+		</div>
+		<hr />
+
+		<div class="column span-24 small quiet">
+			<p>Footer.</p>
+		</div>
+	</div>
+	<!-- /div.container for sample -->
+
+	<p><br /></p>
+	
+	
+	<!-- div.container  for typography -->
+
+	<div class="container">
+		<h2>Typography: Sensible default values for fonts and vertical spacing</h2>
+		<hr />
+
+		<div class="column span-8">
+			<p>Lorem ipsum dolor <span class="caps">NATO</span> sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<ul>
+				<li>Unordered list test</li>
+				<li>Another list element</li>
+				<li>Yet another element in the list</li>
+			</ul>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			
+<pre><code>&lt;h1&gt;Pre + code test&lt;/h1&gt;
+&lt;hr&gt;</code></pre>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			<hr />
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</blockquote>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+
+		<div class="column span-8">
+			<h1>H1: Lorem ipsum dolor sit amet</h1>
+			<h2>H2: Lorem ipsum dolor sit amet, consectetur elit</h2>
+			<h3>H3: Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+			<h4>H4: Lorem ipsum dolor sit amet, consectetur adipisicing elit adipis</h4>
+			<h5>H5: Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</h5>
+			<h6>H6: Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</h6>
+			<hr />
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<h1>Heading 1</h1>
+			<hr />
+			<h2>Heading 2</h2>
+			<hr />
+			<h3>Heading 3</h3>
+			<hr />
+			<h4>Heading 4</h4>
+			<hr />
+			<h5>Heading 5</h5>
+			<hr />
+			<h6>Heading 6</h6>
+			<hr />
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+			<table border="0" cellspacing="0" cellpadding="0">
+				<tr>
+					<th class="span-2">Header</th>
+					<th class="span-2">Header</th>
+					<th class="span-2">Header</th>
+					<th class="span-2 last">Header</th>
+				</tr>
+				<tr>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+				</tr>
+				<tr>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+				</tr>
+				<tr>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+					<td>Data</td>
+				</tr>
+			</table>
+		</div>
+
+		<div class="column span-8 last">
+			<p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="box">
+				<p class="last">Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<hr />
+		</div>
+		<hr />
+	</div><!-- /div.container for typography-->
+	<p><br /></p>
+	
+	<!-- div.container for grid -->
+
+	<div class="container">
+		<h2>Grid Layouts: A demonstration of flexibility</h2>
+		<hr />
+
+		<div class="column span-8">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-8">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-8 last">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<hr />
+
+		<div class="column span-6 append-1">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-6 append-2">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-6 append-3 last">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<hr />
+
+		<div class="column span-6 prepend-1">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-6 prepend-2">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<div class="column span-6 prepend-3 last">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+		</div>
+		<hr />
+
+		<div class="column span-12 border">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="column span-12 last">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<hr />
+
+		<div class="column span-1 prepend-1"><p>1</p></div>
+		<div class="column span-1 prepend-2"><p>2</p></div>
+		<div class="column span-1 prepend-3"><p>3</p></div>
+		<div class="column span-1 prepend-4"><p>4</p></div>
+		<div class="column span-1 prepend-5"><p>5</p></div>
+		<div class="column span-1 prepend-3 last"><p>3</p></div>
+
+		<div class="column span-1 append-1"><p>1</p></div>
+		<div class="column span-1 append-2"><p>2</p></div>
+		<div class="column span-1 append-3"><p>3</p></div>
+		<div class="column span-1 append-4"><p>4</p></div>
+		<div class="column span-1 append-5"><p>5</p></div>
+		<div class="column span-1 append-3 last"><p>3</p></div>
+		
+		<div class="column span-1 border"><p>1</p></div>
+		<div class="column span-1 border"><p>2</p></div>
+		<div class="column span-1 border"><p>3</p></div>
+		<div class="column span-1 border"><p>4</p></div>
+		<div class="column span-1 border"><p>5</p></div>
+		<div class="column span-1 border"><p>6</p></div>
+		<div class="column span-1 border"><p>7</p></div>
+		<div class="column span-1 border"><p>8</p></div>
+		<div class="column span-1 border"><p>9</p></div>
+		<div class="column span-1 border"><p>10</p></div>
+		<div class="column span-1 border"><p>11</p></div>
+		<div class="column span-1 border"><p>12</p></div>
+		<div class="column span-1 border"><p>13</p></div>
+		<div class="column span-1 border"><p>14</p></div>
+		<div class="column span-1 border"><p>15</p></div>
+		<div class="column span-1 border"><p>16</p></div>
+		<div class="column span-1 border"><p>17</p></div>
+		<div class="column span-1 border"><p>18</p></div>
+		<div class="column span-1 border"><p>19</p></div>
+		<div class="column span-1 border"><p>20</p></div>
+		<div class="column span-1 border"><p>21</p></div>
+		<div class="column span-1 border"><p>22</p></div>
+		<div class="column span-1 border"><p>23</p></div>
+		<div class="column span-1 last"><p>24</p></div>
+		<hr />
+		
+		<div class="column span-4"><p>1</p></div>
+		<div class="column span-4"><p>2</p></div>
+		<div class="column span-4"><p>3</p></div>
+		<div class="column span-4"><p>4</p></div>
+		<div class="column span-4"><p>5</p></div>
+		<div class="column span-4 last"><p>6</p></div>
+		<hr />
+		
+		<div class="column prepend-23 span-1 last"><p>24</p></div>
+		<hr />
+		
+		<div class="column prepend-1 span-1"><p>2</p></div>
+		<div class="column prepend-20 span-1 append-1 last"><p>23</p></div>
+		<hr />
+		
+		<div class="span-24">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<hr />
+
+		<div class="column span-12">
+			<div class="column span-6">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
+
+			<div class="column span-6 last">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+
+			<div class="column span-12 last">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+
+		<div class="column span-12 last">
+			<div class="column span-6">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
+
+			<div class="column span-6 last">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+
+			<div class="column span-12 last">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		</div>
+		<hr />
+
+		<div class="column span-14 prepend-5 append-5 last">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		
+	</div><!-- /div.container for grid -->
+  <p><br /></p>
+
+	<!-- div.container for plugins -->
+
+	<div class="container">
+    <h2>Plugin tests</h2>
+    <hr />
+    
+    <div class="column span-9">
+      <h3>Buttons plugin</h3>
+      <p>
+      	<button type="submit" class="button positive">
+      	  <img src="../blueprint/plugins/buttons/icons/tick.png" alt=""/> Save
+      	</button>
+      	<a class="button" href="/password/reset/">
+      	  <img src="../blueprint/plugins/buttons/icons/key.png" alt=""/> Change Password
+      	</a>
+      	<a href="#" class="button negative">
+      	  <img src="../blueprint/plugins/buttons/icons/cross.png" alt=""/> Cancel
+      	</a>
+      </p>
+      <p>
+      	<button type="submit" class="button positive">Positive</button>
+      	<a class="button" href="/password/reset/">Neutral</a>
+      	<a href="#" class="button negative">Negative</a>
+      </p>
+    </div>
+    <div class="column span-8">
+      <h3>IE5.5+ PNG transparency plugin</h3>
+      <p style="position:relative;"><strong>This text should display behind the transparent images layered on top.</strong> Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <img src="transparent.png" style="position:absolute; top:-40px; left:0;" width="300" height="150" alt="Transparent PNG" /></p>
+    </div>
+    <div class="column span-7 last">
+      <h3>Fancy Type plugin</h3>
+      <p>Parts of this plugin is tested in the sample page at the top.</p>
+      <p><a href="http://bjorkoy.com">External link</a>, <a href="mailto:fake@mail.domain">Mailto link</a>.</p>
+    </div>      
+    <hr />
+      
+		<div class="column span-24">
+			<p>
+        <a href="http://validator.w3.org/check?uri=referer">
+          <img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0 Strict" height="31" width="88" />
+        </a>
+      </p>
+		</div>		
+
+	</div>
+	<!-- /div.container for plugins -->
+
+</body>
+</html>
+=======
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
@@ -375,3 +754,4 @@
 
 </body>
 </html>
+>>>>>>> .r160
